# comfy-api-graphs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PERSONALIZATION.md  README.md  SYNC_POLICY.md  pyproject.toml
docs/: api-reference.md
docs/maintainers/: PERSONALIZATION.md  SYNC_POLICY.md
examples/: basic_txt2img.py  custom_workflow.py  execution_example.py  img2img_with_lora.py  seed_batch_cookbook.py  utility_templates_example.py  video_generation.py
src/comfy_api_graphs/: __init__.py  core.py  validation.py
src/comfy_api_graphs/templates/: __init__.py  flux_templates.py  sdxl_templates.py  utility_templates.py  video_templates.py
tests/: test_core.py  test_templates.py
tests/fixtures/: minimal_api_graph.json
