[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfy-api-graphs"
version = "0.3.0"
description = "Offline Python helper for ComfyUI API-format graphs by [ U N B R A N D E D ]. Load → mutate → object_info validate → re-queue. Not a ComfyUI runtime."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "[ U N B R A N D E D ]"},
]
maintainers = [
    {name = "[ U N B R A N D E D ]"},
]
keywords = [
    "comfyui",
    "api-format",
    "workflow",
    "graph",
    "json",
    "flux",
    "sdxl",
    "diffusion",
    "image-generation",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "build>=1.0",
]
examples = [
    "requests>=2.28.0",
    "websockets>=11.0",
]

[project.urls]
Homepage = "https://github.com/U-N-B-R-A-N-D-E-D/comfy-api-graphs"
Repository = "https://github.com/U-N-B-R-A-N-D-E-D/comfy-api-graphs"
Issues = "https://github.com/U-N-B-R-A-N-D-E-D/comfy-api-graphs/issues"
Changelog = "https://github.com/U-N-B-R-A-N-D-E-D/comfy-api-graphs/blob/main/CHANGELOG.md"
# Install from source until a real PyPI publish exists: pip install -e ".[dev,examples]"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_api_graphs"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=comfy_api_graphs --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
